<resources>
    <string name="app_name">SocialMe</string>
    <string name="socialme">SocialMe</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="invite">INVITE FRIENDS</string>
    <string name="description">Description</string>
    <string name="new_event">NEW event</string>
    <string name="event1">Event1</string>
    <string name="location">SHOW ON MAP</string>
    <string name="invited">INVITE PEOPLE</string>
    <string name="todo">TODO</string>
    <string name="add_location">ADD LOCATION:</string>
    <string name="title2">TITLE:</string>
    <string name="date2">DATE:</string>
    <string name="description2">DESCRIPTION:</string>
    <string name="invite_friends">INVITE FRIENDS</string>
    <string name="sign_up">Sing up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
</resources>
