<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageActivity">

    <TextView
        android:id="@+id/tSocialMe"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="178dp"
        android:layout_marginBottom="648dp"
        android:text="@string/socialme"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <ImageButton
        android:id="@+id/bBack"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/bProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/myprof"
        android:background="@drawable/round_button"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="176dp"
        android:text="@string/title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tSocialMe" />

    <TextView
        android:id="@+id/tDate"
        android:layout_width="56dp"
        android:layout_height="35dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="176dp"
        android:text="@string/date"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tTitle" />

    <TextView
        android:id="@+id/tDescription"
        android:layout_width="338dp"
        android:layout_height="148dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="31dp"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tDate" />

    <Button
        android:id="@+id/bInvite"
        android:layout_width="146dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:text="@string/invite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tDescription"
        android:onClick="open" />

    <Button
        android:id="@+id/bLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bInvite" />

    <Button
        android:id="@+id/bInvited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/invited"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bLocation" />

</androidx.constraintlayout.widget.ConstraintLayout>