<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewEventActivity"
    android:background="@drawable/background">

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="326dp"
        android:layout_height="47dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:fontFamily="@font/bold"
        android:hint="@string/title2"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textColor="#C67575"
        app:layout_constraintBottom_toTopOf="@+id/tvDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.709"
        app:layout_goneMarginBottom="5dp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="326dp"
        android:layout_height="47dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:fontFamily="@font/bold"
        android:hint="@string/date2"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:textColor="#C67575"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/descriptionEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764"
        app:layout_goneMarginTop="5dp" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="326dp"
        android:layout_height="47dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:fontFamily="@font/bold"
        android:hint="@string/add_location"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textColor="#C67575"
        app:layout_constraintBottom_toTopOf="@+id/descriptionEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDate"
        app:layout_goneMarginTop="5dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/publish"
        android:layout_width="114dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/publish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="52dp"
        android:layout_height="44dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/returnbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/publish"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="347dp"
        android:layout_height="206dp"
        android:background="@drawable/description"
        android:ems="10"
        android:fontFamily="@font/bold"
        android:gravity="start"
        android:hint="@string/description2"
        android:inputType="textMultiLine"
        android:paddingStart="10dp"
        android:paddingTop="14dp"
        android:textColor="#C67575"
        app:layout_constraintBottom_toTopOf="@+id/publish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>
